--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SouffleTeamPrototype"
         tools:targetApi="31">
-
-        <!-- Your activities and other components here -->
-
+        <activity
+            android:name=".ShopCart"
+            android:exported="false" />
+        <activity
+            android:name=".CheeseCakeItem"
+            android:exported="false" />
         <activity
             android:name=".ShoppingCart"
             android:exported="false" />
