--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         android:theme="@style/Theme.SouffleTeamPrototype"
         tools:targetApi="31">
         <activity
+            android:name=".Review"
+            android:exported="false" />
+        <activity
+            android:name=".CreateReview"
+            android:exported="false" />
+        <activity
             android:name=".OrderStatus"
             android:exported="false" />
         <activity
