--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,15 @@
         android:theme="@style/Theme.SouffleTeamPrototype"
         tools:targetApi="31">
         <activity
+            android:name=".ViewOrderFeedback"
+            android:exported="false" />
+        <activity
+            android:name=".OrderFeedback"
+            android:exported="false" />
+        <activity
+            android:name=".Feedback"
+            android:exported="false" />
+        <activity
             android:name=".Review"
             android:exported="false" />
         <activity
